final changes version 1

--- a/my-bbq-website/index.html
+++ b/my-bbq-website/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Professional BBQ catering services for all events. Authentic Brazilian and American BBQ options available. Contact us for custom packages and pricing." />
+    <meta name="description" content="Authentic barbecue catering in Boca Raton featuring Brazilian BBQ, American-style grilling, and premium steaks like Tomahawk, Porterhouse, and Rump. Book your next event today." />
     <meta name="keywords" content="bbq catering, bbq catering prices, brazilian bbq, american bbq, catering services" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Raleway:wght@400;500;600&display=swap" rel="stylesheet">
-    <title>BBQ Catering - Boios Barbecue</title>
+    <title>BBQ Catering - Boios Barbecue - Professional BBQ Services</title>
   </head>
   <body>
     <div id="root"></div>
