index.html commit for Google Analytics

--- a/my-bbq-website/index.html
+++ b/my-bbq-website/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7KJ44SZ92G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7KJ44SZ92G');
+</script>
     <meta name="google-site-verification" content="FIredC7C0SL4kK8AZwccad4Sma16u5qeLd0yY2Urca8" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
